[package]
name = "ironshield-wasm"
version = "0.1.12"
edition = "2021"
authors = [ "IronShield Developers <software@ironshield.cloud>" ]
description = "WebAssembly bindings for IronShield"
repository = "https://github.com/IronShield-Tech/ironshield-wasm"
license = "Apache-2.0"
readme = "README-crates.md"
keywords = ["wasm", "proof-of-work", "webassembly", "ddos", "javascript"]
categories = ["wasm", "cryptography", "web-programming"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ironshield-core = { version = "0.3", features = ["parallel"] }
ironshield-types = { version = "0.2", features = ["wasm-logging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console", "Window", "Navigator"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-rayon = { version = "1.0", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
rayon = { version = "1.8", optional = true }

[features]
default = ["parallel"]
# Core features
parallel = ["wasm-bindgen-rayon", "wasm-bindgen-futures", "rayon", "ironshield-core/parallel"]
# Testing features - use inverted logic
no-parallel = ["ironshield-core/no-parallel"]  # Disables parallel when enabled
mobile-safari = ["no-parallel"]  # Alias for mobile testing

[profile.release]
# Optimized for minimum file size
# Avoid setting a strip value to be compatible with wasm-opt
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
